force-app/main/default/objects/ClanWarLeagueClanMember__c/ClanWarLeagueClanMember__c.object-meta.xml
<CustomObject>
    <label>Clan War League Clan Member</label>
    <nameField>
        <label>Clan Member Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Clan War League Clan Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>