force-app/main/default/objects/ClanWarLeagueClanMember__c/fields/ClanWarLeagueClan__c.field-meta.xml
<CustomField>
    <fullName>ClanWarLeagueClan__c</fullName>
    <label>Clan War League Clan</label>
    <referenceTo>ClanWarLeagueClan__c</referenceTo>
    <relationshipLabel>Clan War League Clan Members</relationshipLabel>
    <relationshipName>ClanWarLeagueClanMembers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>