force-app/main/default/objects/ClanWarLeagueClanMember__c/fields/TownHallLevel__c.field-meta.xml
<CustomField>
    <fullName>TownHallLevel__c</fullName>
    <label>Town Hall Level</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>